# sipap-intelligence-mcp

./: .gitignore  README.md  VERIFICATION-REPORT.md  pyproject.toml  requirements-lambda.txt
.github/workflows/: lambda-package.yml  requirements-layer-package.yml
examples/: README.md  injury_impact.py  mcp_client.py  news_sentiment.py  weather_analysis.py
src/sipap_intelligence_mcp/: __init__.py  lambda_handler.py  server.py
src/sipap_intelligence_mcp/ai/: __init__.py  claude.py  prompts.py
src/sipap_intelligence_mcp/apis/: __init__.py  weather.py
src/sipap_intelligence_mcp/exceptions/: __init__.py
src/sipap_intelligence_mcp/models/: __init__.py
src/sipap_intelligence_mcp/tools/: __init__.py  news.py  weather.py
tests/unit/: test_claude_client.py  test_prompts.py  test_tools_news.py  test_tools_weather.py  test_weather_api.py
